--- a/EMC web page/register.html
+++ b/EMC web page/register.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html>
+<head>
+    
+    <title>Register for a course</title>
+</head>
+<body>
+    <center>
+     <h1>
+        Error Makes Clever Academy🚀
+     </h1>
 
+     <h4>
+        Training | Tech News | Freshers Guide
+     </h4>
+
+     <p>
+        Empowering young developers to level up their skills through training in software development technologies🧑‍💻
+     </p> <hr>
+    
+    <h1>
+        Registration Form
+    </h1>
+
+    <form>
+        <table>
+            <tr>
+                <td>Name:</td> <td><input type="text"></td>
+            </tr>
+
+            <tr>
+                <td>Age:</td> <td><input type="number"></td>
+            </tr>
+
+            <tr>
+                <td>Gender:</td> <td><input type="radio" name="Gender">Male <input type="radio" name="Gender">Female</td>
+            </tr>
+
+            <tr>
+                <td>E-mail:</td> <td><input type="text"></td>
+            </tr>
+
+            <tr>
+                <td>Select a course:</td> <td>
+                    <select>
+                        <option>Fullstack development</option>
+                        <option>Java Programming</option>
+                        <option>Python</option>
+                        <option>Data Analyst</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>Upload your resume:</td>
+                <td><input type="file"></td>
+            </tr>
+
+            <tr>
+                <td><input type="reset"></td>  <td><input type="submit"></td>
+            </tr>
+        </table>
+    </form>
+<hr>
+    <center>
+
+        <a href="index.html">Home|</a>
+        <a href="https://www.instagram.com/errormakesclever/?hl=en">Instagram|</a>
+        <a href="https://www.youtube.com/results?search_query=error+makes+clever+academy">Youtube</a>
+    </center>
+
+</body>
+</html>
