--- a/Perfume web page/perfumy.html
+++ b/Perfume web page/perfumy.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html >
+<head>
+    <title>Perfumy</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="header">
+  <nav>
+    <h1>Perfumy</h1>
+    <ul>
+        <li>Home |</li>
+        <li>Products |</li>
+        <li>About |</li>
+        <li>Contact</li>
+    </ul>
+  </nav>
+    </div>
+    <div class="searchbar">
+      <input placeholder="Search">
+    </div>
+    <div class="products">
+        <div class="box">
+            <img src="p1.jpg" height="220px" width="220px">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur nostrum eum ullam ipsam quisquam impedit facilis hic expedita doloremque magni?</p>
+        </div>
+        <div class="box">
+            <img src="p2.jpeg" height="220px" width="220px">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur nostrum eum ullam ipsam quisquam impedit facilis hic expedita doloremque magni?</p>
+        </div>
+        <div class="box">
+            <img src="p3.jpeg" height="220px" width="220px">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur nostrum eum ullam ipsam quisquam impedit facilis hic expedita doloremque magni?</p>
+        </div>
 
+    </div>
+    <div class="about">
+      <h1 style="text-align: center;">About Us</h1>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium magni eligendi sed error temporibus, quod, minima facere quam culpa enim dicta ratione officia repellendus aut et nemo sunt dignissimos velit a soluta quo praesentium? Mollitia, natus enim minima, iste eum adipisci tenetur sint autem velit voluptates placeat facilis, voluptatem consequuntur sequi non possimus rem minus illum omnis quo blanditiis libero? Ratione optio ullam nihil laboriosam facere aut, sit adipisci commodi nemo reprehenderit, explicabo atque deleniti velit. Consequuntur, velit veritatis! Obcaecati distinctio neque atque eos rem necessitatibus temporibus, doloremque totam adipisci, magnam ex earum officiis velit iusto ut laborum consequuntur a sequi aspernatur! Eaque mollitia at laudantium perspiciatis ipsum accusamus velit beatae corporis magnam error minus obcaecati impedit repudiandae necessitatibus quas, explicabo tempore consequuntur eos nulla fuga pariatur nihil repellendus laborum! Quaerat odit totam expedita perspiciatis id? Ratione, consequuntur! Veniam sint ab libero dolorem corporis molestias optio at eveniet eum, minus aliquid, tempora quos atque maxime voluptatum quam laboriosam cum quaerat, labore ipsa eaque aperiam soluta porro similique. Expedita omnis esse facere, fugit eum debitis in, ad maiores est eaque officiis voluptates itaque ea. Corporis maxime mollitia molestias cumque harum error perspiciatis! Repellat, explicabo! Atque perferendis aspernatur laudantium distinctio doloribus illum, culpa beatae vel sequi eum? Quod quas qui unde, architecto ut repudiandae fugit, asperiores error minima eius soluta iusto ullam, ipsam quisquam ea ex reprehenderit eligendi explicabo dolorum a. Fugit qui sequi, voluptatibus cumque tempore explicabo fuga, minus numquam recusandae culpa totam libero soluta dolorum praesentium, error id dolor nisi? Iste incidunt fugiat illo eligendi unde suscipit sapiente labore ut consequuntur facere culpa nemo quos, odio beatae, deserunt quam voluptatem cupiditate molestias minus ipsum, dolorum quis reiciendis quo! Quod ex aperiam fuga necessitatibus quia quibusdam! Dicta, necessitatibus. Facilis ad quos ipsum. Nulla, accusamus sunt autem porro delectus atque inventore? Non.</p>
+    </div>
+    <div class="contact">
+      <h4>Contact</h4>
+      <p>+918754634556</p>
+      <p>perfumy@gmail.com</p>
+      <p class="One">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, aspernatur, aliquid perspiciatis, iusto laborum quae quod omnis nihil doloribus fugit magnam enim dolor dolorum. Facere optio nemo rem temporibus inventore perspiciatis maxime quos cupiditate quasi qui. A facere quae, reiciendis eos voluptate laudantium consequuntur explicabo praesentium beatae aperiam odio, ullam architecto unde ad dolores sapiente hic numquam obcaecati neque rerum veritatis sit quam ipsa. Assumenda incidunt dolorum quasi voluptatum, exercitationem deleniti at perspiciatis vero aliquid id alias unde in quisquam reprehenderit voluptas rerum cumque quod ut nam perferendis officiis ducimus soluta enim aut? Fugit numquam nostrum, eveniet enim quaerat similique?</p>
+    </div>
+</body>
+</html>
