--- a/CODSOFT INTERNSHIP/portfolio website/portfolio.html
+++ b/CODSOFT INTERNSHIP/portfolio website/portfolio.html
@@ -1,1 +1,83 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kalaiselvi's Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <div class="logo"></div>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#resume">Resume</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="header-intro">
+            <h1>Kalaiselvi Dharmalingam</h1>
+            <p>Electronics and Communication Engineer | Aspiring Web Developer</p>
+        </div>
+    </header>
+
+    <section id="about" class="about">
+        <h2>About Me</h2>
+        <div class="about-content">
+           
+            <p>Hi, I'm Kalaiselvi, a final year Electronics and Communication Engineering student at Velalar College of Engineering and Technology. I'm passionate about web development and enjoy solving problems in data structures and algorithms. I have completed projects in web development, including a food app and event management, and I have done a smart glove for sign language detection using ESP32.</p>
+        </div>
+    </section>
+
+    <section id="skills" class="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Web Development (HTML, CSS, JavaScript)</li>
+            <li>Java Programming</li>
+            <li>Data Structures and Algorithms</li>
+            <li>Android Development (Kotlin)</li>
+            <li>UI/UX Design</li>
+            <li>Embedded Systems (ESP32 , ARDUINO)</li>
+        </ul>
+    </section>
+
+    <section id="projects" class="projects">
+        <h2>Projects</h2>
+        <div class="project-item">
+            <h3>Smart Glove for Sign Language Detection</h3>
+            <p>Developed a smart glove using ESP32 to detect sign language and convert it into text for communication.</p>
+        </div>
+        <div class="project-item">
+            <h3>Agriculture Robot for Crop Ailment Detection</h3>
+            <p>Created an agriculture robot using the YOLO algorithm to detect crop ailments and improve farming efficiency.</p>
+        </div>
+        <div class="project-item">
+            <h3>Food App</h3>
+            <p>Designed and developed a food app to facilitate online ordering and delivery of meals.</p>
+        </div>
+        <div class="project-item">
+            <h3>Event Management System</h3>
+            <p>Built an event management system to streamline the planning and execution of events.</p>
+        </div>
+    </section>
+
+    <section id="resume" class="resume">
+        <h2>Resume</h2>
+        <a href="resume.pdf" download>Download My Resume</a>
+    </section>
+
+    <section id="contact" class="contact">
+        <h2>Contact Me</h2>
+        <p>Email: kalaiselvi@gmail.com</p>
+        <p>Phone: +91-1234567890</p>
+    </section>
+
+    <footer>
+        <p></p>
+    </footer>
+</body>
+</html>
 
