--- a/CODSOFT INTERNSHIP/Landing page/landing.html
+++ b/CODSOFT INTERNSHIP/Landing page/landing.html
@@ -1,1 +1,100 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Online Courses Landing Page</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <div class="logo"><h1>LEARnHUB</h1></div>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#courses">Courses</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="home" class="hero">
+        <div class="hero-content">
+            <h1>Welcome to LEARnHUB Courses</h1>
+            <p>Learn from the best courses available online</p>
+            <a href="#courses" class="cta">Explore Courses</a>
+        </div>
+    </section>
+
+    <section id="courses" class="courses">
+        <h2>Our Courses</h2>
+        <div class="course-list">
+            <div class="course-item">
+                <img src="l1.jpeg" alt="Web Development">
+                <h3>Web Development</h3>
+                <p>Learn HTML, CSS, JavaScript, and more.</p>
+            </div>
+            <div class="course-item">
+                <img src="l2.jpeg" alt="Data Science">
+                <h3>Data Science</h3>
+                <p>Master data analysis and machine learning.</p>
+            </div>
+            <div class="course-item">
+                <img src="l3.jpeg" alt="Graphic Design">
+                <h3>Graphic Design</h3>
+                <p>Discover the principles of graphic design.</p>
+            </div>
+            <div class="course-item">
+                <img src="l4.jpeg" alt="Cyber Security">
+                <h3>Cyber Security</h3>
+                <p>Learn how to protect systems and networks.</p>
+            </div>
+            <div class="course-item">
+                <img src="l5.jpeg" alt="Business Management">
+                <h3>Business Management</h3>
+                <p>Understand the essentials of business management.</p>
+            </div>
+            <div class="course-item">
+                <img src="l6.jpeg" alt="Digital Marketing">
+                <h3>Digital Marketing</h3>
+                <p>Learn strategies for online marketing.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="about" class="about">
+        <div class="about-content">
+            <div class="about-text">
+                <h2>About Us</h2>
+                <p>Welcome to LearnHub, your go-to platform for quality education and professional development. We are dedicated to providing the best online courses designed to help you gain the skills and knowledge needed to excel in today's fast-paced, ever-changing world. Our mission is to make learning accessible, affordable, and effective for everyone, regardless of their location or background.
+
+                    At LearnHub, we believe that education is the cornerstone of success and personal growth. Our team of experienced educators, industry professionals, and tech enthusiasts work tirelessly to create a diverse range of courses that cater to the needs of learners from all walks of life. Whether you're looking to advance your career, switch industries, or simply pursue a new hobby, we have something for you.
+                    
+                    Our platform offers courses across various disciplines, including technology, business, arts, sciences, and more. Each course is meticulously crafted by subject matter experts and industry leaders, ensuring you receive the highest quality education. We leverage the latest teaching methodologies and technological advancements to deliver an engaging and interactive learning experience.</p>
+            </div>
+            <div class="about-image">
+                <img src="about.jpeg" alt="About Us">
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="contact">
+        <h2>Contact Us</h2>
+        <form>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" required></textarea>
+            <button type="submit">Send</button>
+        </form>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Online Courses. All rights reserved.</p>
+    </footer>
+</body>
+</html>
 
